[package]
name = "raytracer"
version = "0.1.0"
authors = ["Wafelack <wafelack@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
lazy_static = "1.4.0"
rayon = "1.5.0"
stb_image = "0.2.2"
